--- a/index.html
+++ b/index.html
@@ -1,11 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>keyboard test</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>keyboard test</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="tombol">
+      <input type="text" placeholder="texr akan muncul disini" />
+
+        <!-- row angka -->
+        <div class="row">
+          <button class="key">esc</button>
+          <button class="key">1</button>
+          <button class="key">2</button>
+          <button class="key">3</button>
+          <button class="key">4</button>
+          <button class="key">5</button>
+          <button class="key">6</button>
+          <button class="key">7</button>
+          <button class="key">8</button>
+          <button class="key">9</button>
+          <button class="key">0</button>
+          <button class="key">-</button>
+          <button class="key">=</button>
+          <button class="key wide-backspace">backspace</button>
+        </div>
+
+        <!-- row huruf 1 -->
+        <div class="row">
+          <button class="key wide-tab">tab</button>
+          <button class="key">q</button>
+          <button class="key">w</button>
+          <button class="key">e</button>
+          <button class="key">r</button>
+          <button class="key">t</button>
+          <button class="key">y</button>
+          <button class="key">u</button>
+          <button class="key">i</button>
+          <button class="key">o</button>
+          <button class="key">p</button>
+          <button class="key">[</button>
+          <button class="key">]</button>
+          <button class="key wide-tab">|</button>
+        </div>
+
+        <!-- row huruf 2 -->
+        <div class="row">
+          <button class="key wide-cap">caps</button>
+          <button class="key">a</button>
+          <button class="key">s</button>
+          <button class="key">d</button>
+          <button class="key">f</button>
+          <button class="key">g</button>
+          <button class="key">h</button>
+          <button class="key">j</button>
+          <button class="key">k</button>
+          <button class="key">l</button>
+          <button class="key">;</button>
+          <button class="key">'</button>
+          <button class="key wide-enter">enter</button>
+        </div>
+
+        <!-- row huruf 3 -->
+        <div class="row">
+          <button class="key wide-shift">shift</button>
+          <button class="key">z</button>
+          <button class="key">x</button>
+          <button class="key">c</button>
+          <button class="key">v</button>
+          <button class="key">b</button>
+          <button class="key">n</button>
+          <button class="key">m</button>
+          <button class="key">,</button>
+          <button class="key">.</button>
+          <button class="key">/</button>
+          <button class="key wide-shift-2">shift</button>
+          <button class="key">atas</button>
+        </div>
+
+        <!-- row spasi -->
+        <div class="row">
+          <button class="key">ctrl</button>
+          <button class="key">win</button>  
+          <button class="key">alt</button>
+          <button class="key wide-space">spasi</button>
+          <button class="key">alt</button>
+          <button class="key">fn</button>
+          <button class="key">ctrl</button>
+          <button class="key">kiri</button>
+          <button class="key">bawah</button>
+          <button class="key">kanan</button>
+         </div>
+      </div>
+    </div>
+  </body>
 </html>
