--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>keyboard test</title>
     <link rel="stylesheet" href="style.css" />
+    <style>
+      .aktif {
+        background-color: #861a1a;
+        color: #000;
+      }
+
+      .spesial {  
+        background-color: #000;
+        color: #fff;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
       <div class="tombol">
-      <input type="text" placeholder="texr akan muncul disini" />
+      <input id="hasil" type="text" placeholder="texr akan muncul disini" />
 
         <!-- row angka -->
         <div class="row">
@@ -96,5 +107,6 @@
          </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
