--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <div class="container">
       <div class="tombol">
-      <input id="hasil" type="text" placeholder="texr akan muncul disini" />
+        <label id="label-clear" for=""> clear
+          <input id="hasil" type="text" placeholder="texr akan muncul disini" />
+        </label>
 
         <!-- row angka -->
         <div class="row">
