--- a/index.html
+++ b/index.html
@@ -6,32 +6,15 @@
     <title>keyboard test</title>
     <link rel="stylesheet" href="style.css" />
     <style>
-      .aktif {
-        font-size: 20px;
-        text-transform: uppercase;
-        background-color: #2cdf08;
-        color: #000;
-        font-weight: bold;
-        transform: scale(0.5);
-        transition: 0.5s;
-      }
-
-      .spesial {  
-        background-color: #000;
-        color: #fff;
-      }
+     
     </style>
   </head>
   <body>
     <div id="container" class="container">
       <div class="tombol">
-        <label id="label-clear" for=""> clear
-          <input id="hasil" type="text" placeholder="texr akan muncul disini" />
-        </label>
-
         <!-- row angka -->
         <div class="row">
-          <button class="key">esc</button>
+          <button class="key wide-esc">esc</button>
           <button class="key">1</button>
           <button class="key">2</button>
           <button class="key">3</button>
@@ -67,7 +50,7 @@
 
         <!-- row huruf 2 -->
         <div class="row">
-          <button class="key wide-cap">caps</button>
+          <button class="key wide-cap">CapsLk</button>
           <button class="key">a</button>
           <button class="key">s</button>
           <button class="key">d</button>
@@ -96,21 +79,21 @@
           <button class="key">.</button>
           <button class="key">/</button>
           <button class="key wide-shift-2">shift</button>
-          <button class="key">atas</button>
+          <button class="key atas">atas</button>
         </div>
 
         <!-- row spasi -->
         <div class="row">
-          <button class="key">ctrl</button>
-          <button class="key">win</button>  
-          <button class="key">alt</button>
+          <button class="key ctrl">ctrl</button>
+          <button class="key win">win</button>  
+          <button class="key alt">Alt</button>
           <button class="key wide-space">spasi</button>
-          <button class="key">alt</button>
-          <button class="key">fn</button>
-          <button class="key">ctrl</button>
-          <button class="key">kiri</button>
-          <button class="key">bawah</button>
-          <button class="key">kanan</button>
+          <button class="key alt">Alt</button>
+          <button class="key fn">fn</button>
+          <button class="key ctrl">ctrl</button>
+          <button class="key kiri">kiri</button>
+          <button class="key bawah">bawah</button>
+          <button class="key kanan">kanan</button>
          </div>
       </div>
     </div>
