--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <button class="key">p</button>
           <button class="key">[</button>
           <button class="key">]</button>
-          <button class="key wide-tab">|</button>
+          <button class="key wide-tab">\</button>
         </div>
 
         <!-- row huruf 2 -->
@@ -85,9 +85,9 @@
         <!-- row spasi -->
         <div class="row">
           <button class="key ctrl">ctrl</button>
-          <button class="key win">win</button>  
+          <button class="key win">Win</button>  
           <button class="key alt">Alt</button>
-          <button class="key wide-space">spasi</button>
+          <button class="key wide-space">space</button>
           <button class="key alt">Alt</button>
           <button class="key fn">fn</button>
           <button class="key ctrl">ctrl</button>
